Added Transactional to Ticket class
